Improve handling of missing images and maps folder.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@660 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1723,44 +1723,41 @@ AlternatePID=01 7E
 CmdParms=Prefix Dev:none|X=0,Prefix Cmd:none|X=0,Device:1|2,OBC=0
 CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,1) PickInitializer(2,0,2)
 CmdTranslator=Translator(lsb,comp,3) Translator(comp,0,1,5) Translator(comp,1,1,5) Translator(comp,2,1,5)
-Notes=DVD/0525,0571\
-      \n\n\
-      A Pioneer signal consists of either one or two parts.  Each part has both a \
-      device and a command. \
-      \n\n\
-      "Device 1" on the Setup Sheet is used as the device for the first part of two \
-      part signals and as the only device for one part signals.\
-      \n\n\
-      "Prefix Command" on the Setup sheet is used as the first command for two \
-      part signals.  It isn't used for one part signals. \
-      \n\n\
-      "Device 2" on the Setup sheet is used as the device for the second part of two \
-      part signals.  It isn't used for one part signals. \
-      \n\n\
-      A function on the functions sheet can be fully specified by any one of EFC or \
-      OBC or Hex.  In case of a two part signal from a decoder, this is the EFC, OBC \
-      or Hex of just the second part of the decoded signal.\
-      \n\n\
-      The functions sheet also has columns for "Prefix Device", "Prefix Command", \
-      and "Device".\
-      \n\n\
-      Any OBC with bit 5 set can be sent (by this protocol) only as a one part \
-      signal and will force the "Prefix" columns to say "none" and will force the \
-      device column to be Device 1 from the Setup sheet. \
-      \n\n\
-      Any OBC with bit 5 clear can be sent (by this protocol) only as the second \
-      part of a two part signal and will force the "Prefix" columns to indicate the \
-      first part of the two part signal and will force the device column to be \
-      Device 2 from the Setup sheet. \
-      \n\n\
-      You can change the selection in one of the Prefix columns or the Device column \
-      and it will change the other two to be consistent as well as changing bit 5 \
-      of the OBC to be consistent. \
-      \n\n\
-      The set of signals you need for your Pioneer device may or may not be covered \
-      by these limits.  If you need more flexibility, you should look into the other \
-      Pioneer protocols and/or use Key Moves on another setup code for some of your \
-      signals.
+Notes=A Pioneer signal consists of either one or two parts.  Each part has both a \
+device and a command. \
+\n\n\
+"Device 1" on the Setup Sheet is used as the device for the first part of two \
+part signals and as the only device for one part signals.\
+\n\n\
+"Prefix Command" on the Setup sheet is used as the first command for two \
+part signals.  It isn't used for one part signals. \
+\n\n\
+"Device 2" on the Setup sheet is used as the device for the second part of two \
+part signals.  It isn't used for one part signals. \
+\n\n\
+A function on the functions sheet can be fully specified by any one of EFC or \
+OBC or Hex.  In case of a two part signal from a decoder, this is the EFC, OBC \
+or Hex of just the second part of the decoded signal.\
+\n\n\
+The functions sheet also has columns for "Prefix Dev", "Prefix Cmd", \
+and "Device".\
+\n\n\
+Any OBC with bit 5 set can be sent (by this protocol) only as a one part \
+signal and will force the "Prefix" columns to say "none" and will force the \
+device column to be Device 1 from the Setup sheet. \
+\n\n\
+Any OBC with bit 5 clear can be sent (by this protocol) only as the second \
+part of a two part signal and will force the "Prefix" columns to indicate the \
+first part of the two part signal and will force the device column to be \
+Device 2 from the Setup sheet. \
+\n\n\
+You can change the selection in one of the Prefix columns or the Device column \
+and it will change the other two to be consistent as well as changing bit 5 \
+of the OBC to be consistent. \
+\n\n\
+The set of signals you need for your Pioneer device may or may not be covered \
+by these limits.  If you need more flexibility, you should look into the other \
+Pioneer protocols and/or use Key Moves on another setup code for some of your signals.
 DevParms=Device 1=163,Device 2=175,Prefix Command=153
 FixedData=3a 66 0a
 DeviceTranslator=Translator(lsb,comp,0,8) Translator(lsb,comp,1,8,16) \
@@ -1790,6 +1787,41 @@ CmdTranslator=Translator(lsb,comp,0,8,0) FieldCopier(comp,5,15,1)
 Notes=DVD/0525,0571
 DefaultCmd=00 00
 CmdIndex=0
+Notes=A Pioneer signal consists of either one or two parts.  Each part has both a \
+device and a command. \
+\n\n\
+"Device 1" on the Setup Sheet is used as the device for the first part of two \
+part signals and as the only device for one part signals.\
+\n\n\
+"Prefix Command" on the Setup sheet is used as the first command for two \
+part signals.  It isn't used for one part signals. \
+\n\n\
+"Device 2" on the Setup sheet is used as the device for the second part of two \
+part signals.  It isn't used for one part signals. \
+\n\n\
+A function on the functions sheet can be fully specified by any one of EFC or \
+OBC or Hex.  In case of a two part signal from a decoder, this is the EFC, OBC \
+or Hex of just the second part of the decoded signal.\
+\n\n\
+The functions sheet also has columns for "Prefix Dev", "Prefix Cmd", \
+and "Device".\
+\n\n\
+Any OBC with bit 5 set can be sent (by this protocol) only as a one part \
+signal and will force the "Prefix" columns to say "none" and will force the \
+device column to be Device 1 from the Setup sheet. \
+\n\n\
+Any OBC with bit 5 clear can be sent (by this protocol) only as the second \
+part of a two part signal and will force the "Prefix" columns to indicate the \
+first part of the two part signal and will force the device column to be \
+Device 2 from the Setup sheet. \
+\n\n\
+You can change the selection in one of the Prefix columns or the Device column \
+and it will change the other two to be consistent as well as changing bit 5 \
+of the OBC to be consistent. \
+\n\n\
+The set of signals you need for your Pioneer device may or may not be covered \
+by these limits.  If you need more flexibility, you should look into the other \
+Pioneer protocols and/or use Key Moves on another setup code for some of your signals.
 
 [Pioneer MIX]
 PID=00 7E
@@ -1870,8 +1902,7 @@ On the Setup sheet, enter the device details:\
 Device 1 = the device code found in both the single-style signals \
 and the first half of the double-style signals.\
 \n\n\
-Device 2 = the device code found in the second half of the double-\
-style signals.\
+Device 2 = the device code found in the second half of the double-style signals.\
 \n\n\
 Cmd1 (OBC) = the OBC command code used in the first half of most of the \
 double-style signals.\
@@ -1888,9 +1919,18 @@ Code.HCS08=20 15 21 43 62 A5 44 08 08 01 11 01 09 01 11 03 20 31 8A 10 A5 08 4E 
 
 [Pioneer 2CMD]
 PID=00 5F
-CmdParms=OBC=0,Byte 2=0
+CmdParms=OBC=0,OBC 2=0
 CmdTranslator=Translator(lsb,0,8,0), Translator(lsb,1,8,8)
-Notes=audio/0300
+Notes=If some of the functions for your device send a two-part signal \
+where the device code is the same but the command code varies, you \
+need to use the Pioneer 2CMD protocol.\
+\n\n\
+For the functions that only use one command code, enter the same \
+command in both the regular OBC column and the OBC 2 column of \
+the Functions sheet. \
+\n\n\
+For the functions that use two codes, enter the first one in the \
+OBC column and the second in the OBC 2 column.
 DevParms=Device Code:8=165
 DeviceTranslator=Translator(lsb)
 FixedData=A5
@@ -1903,11 +1943,27 @@ Code.HCS08=20 15 21 43 12 E5 44 08 08 01 02 03 14 01 02 01 06 D2 F0 10 A2 08 65 
 
 [Pioneer 3DEV]
 PID=00 6A
-CmdParms=Device:1|2|3,OBC=0,OBC2:8
+CmdParms=Device:1|2|3,OBC=0,OBC 2:8
 CmdParmInit=PickInitializer(0,0,1,2);
 CmdTranslator=Pioneer3DevXlator()
 ImportCmdTranslator=Translator(lsb,0,2,8) Translator(lsb,1,5,11)
-Notes=audio/1023
+Notes=If the functions for your device use one of up to three different \
+device codes, and some of the functions even send a two-part \
+signal as described above, then you need to use the "Pioneer 3DEV" \
+protocol.\
+\n\n\
+Enter the three device codes, and then, on the Functions sheet, \
+enter the OBC in the regular OBC column.\
+\n\n\
+In the Device column, select the \
+device code to use. If this particular function uses a two-part \
+signal, enter the second OBC in the OBC 2 column.\
+\n\n\
+NOTE: While this protocol supports both OBC's and EFC's, this \
+version is LSB, where most of the other Pioneer protocols are LSB-\
+COMP, so the EFC's will be different. Therefore, it is STONGLY \
+recommended that you use OBC's when setting up the Pioneer 3DEV \
+protocol.
 DevParms=Device 1=162,Device 2=165,Device 3=164
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8) \
                  Translator(lsb,2,8,16)
@@ -1924,7 +1980,7 @@ DevParms=Device 1=162,Device 2=165,Device 3=164,Device 4=160
 DeviceTranslator=Translator(lsb,0,8,0) Translator(lsb,1,8,8,) Translator(lsb,2,8,16) Translator(lsb,3,8,24)
 FixedData=45 A5 25 05
 DefaultCmd=00 00
-CmdParms=Device:1|2|3|4,OBC,OBC2=[1]
+CmdParms=Device:1|2|3|4,OBC,OBC 2=[1]
 CmdParmInit=PickInitializer(0,0,1,2,3)
 CmdTranslator=Pioneer4DevXlator(0)
 ImportCmdTranslator=Pioneer4DevImporter(0)
@@ -1932,6 +1988,23 @@ Code.S3C80=40 84 42 8B 12 E5 44 08 08 01 09 03 16 01 09 00 FF AD 90 10 A9 08 43 
 Code.740=0C 16 42 80 10 F6 B8 01 15 08 08 03 08 01 A4 56 D2 55 06 7B 02 57 61 02 2F 5B 57 62 02 0F 5B 5F 61 5F 62 22 00 E6 69 22 00 C6 69 22 06 90 F4 60
 Code.6805-C9=0C 17 42 20 10 F6 F8 00 15 08 08 03 07 01 A4 56 D2 55 06 7C 02 05 5E 02 12 58 05 5F 02 10 58 15 5E 15 5F CD 01 83 3C 66 CD 01 83 3A 66 CD 01 8C 24 F1 81
 Code.6805-RC16/18=10 22 42 20 10 E5 44 08 08 01 83 95 00 83 89 56 D2 00 84 53 2B 5F 05 5E 01 59 05 5F 00 59 E6 5A B7 5A 15 5E 15 5F CD 01 AF 3C_66 CD 01 AF 3A_66 CD 01 89 24 F1 81
+Notes=If the functions for your device use one of up to four different \
+device codes, and some of the functions even send a two-part \
+signal as described above, then you need to use the "Pioneer 4DEV" \
+protocol.\
+\n\n\
+Enter the four device codes, and then, on the Functions sheet, \
+enter the OBC in the regular OBC column.\
+\n\n\
+In the Device column, select the \
+device code to use. If this particular function uses a two-part \
+signal, enter the second OBC in the OBC 2 column.\
+\n\n\
+NOTE: While this protocol supports both OBC's and EFC's, this \
+version is LSB, where most of the other Pioneer protocols are LSB-\
+COMP, so the EFC's will be different. Therefore, it is STONGLY \
+recommended that you use OBC's when setting up the Pioneer 3DEV \
+protocol.
 
 [Proton]
 PID=00 5C
@@ -2073,7 +2146,7 @@ Code.S3C80=47 93 82 8B 16 88 81 10 08 08 01 BC 01 A8 01 BC 01 A8 AB CC 05 35 01 
            68 0B 76 00 01 6B 05 B6 C6 20 69 0B 8D 01 49 E6 28 8E E6 29 05 B0 2A B0 C7 2C 14 C6 C0 FF 82 4C \
            0A E3 50 D7 25 2E 4A F9 68 0C 56 C6 06 87 06 05 87 16 06 09 05 19 06 E4 0B 07 68 07 2C 08 CF 10 \
            08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D \
-           01 49 00 DE 00 00 00 00 00 CC A3 91 
+           01 49 00 DE 00 00 00 00 00 CC A3 91
 
 [RC6-6-32]
 PID=01 2a
@@ -2607,14 +2680,14 @@ CmdTranslator=Translator(0,1,7) Translator(lsb,1,7)
 CmdParms=Device:0|1,OBC=0
 CmdParmInit=PickInitializer(0,N0,N2)
 Notes=Combines two devices, each of which may be either Sony12 or Sony15 \
-   \n\n\
-   Leaving the "Force Sony15" checkbox blank is almost always correct. \
-   Device numbers 32 and greater cannot be Sony12 and are automatically Sony15. \
-   Device numbers less than 32 can be Sony12 or Sony15, but it is VERY rare for \
-   them to be Sony15.  When you leave the check box blank Device numbers less \
-   than 32 are Sony12, which is almost always correct.  Check "Force Sony15" to \
-   make the device number (just the one above that check box) be Sony15 even if \
-   it is less than 32.
+\n\n\
+Leaving the "Force Sony15" checkbox blank is almost always correct. \
+Device numbers 32 and greater cannot be Sony12 and are automatically Sony15. \
+Device numbers less than 32 can be Sony12 or Sony15, but it is VERY rare for \
+them to be Sony15.  When you leave the check box blank Device numbers less \
+than 32 are Sony12, which is almost always correct.  Check "Force Sony15" to \
+make the device number (just the one above that check box) be Sony15 even if \
+it is less than 32.
 DevParms=Device 1=0,Force Sony15:bool,Device 2=[0],Force Sony15:bool
 DeviceImporter=ReorderImporter(0,2)
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,2,8,8) Sony1215Translator()
