Fix protocols.ini entries for Dish Network Combo to fix importing KM files, to use alternate PID, and to allow switching back and forth to Dish Network
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@668 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -608,6 +608,7 @@ OldNames=Dishplayer (old)
 VariantName=5
 DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device 4:5=0,Remote Address (1 to 32) :5=1
 DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
+DeviceImporter=ReorderImporter(4,0,1,2,3)
 CmdParms=Device:0|1|2|3,OBC:6=0
 CmdParmInit=PickInitializer(0,0,1,n2,n3)
 CmdTranslator=Translator(1,6) Translator(0,2,6)
@@ -629,9 +630,12 @@ Code.HCS08=20 17 17 2F 51 B6 59 05 06 00 C4 03 46 00 C4 05 \
                           61 CC FF 5F
 
 [Dish Network Combo]
-PID=01 E2
-DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device4:5=0,Remote Address (1 to 32) :5=0
+PID=00 02
+Variant Name=5
+AlternatePID=01 E2
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device 4:5=0,Remote Address (1 to 32) :5=0
 DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
+DeviceImporter=ReorderImporter(4,0,1,2,3)
 CmdParms=Device:0|1|2|3,OBC:6=0
 CmdParmInit=PickInitializer(0,0,1,n2,n3)
 CmdTranslator=Translator(1,6) Translator(0,2,6)
