*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@670 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -968,6 +968,7 @@ DefaultCmd=00 00
 CmdIndex=1
 CmdParms=OBC=0,Device=0
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 Code.S3C80=43 8B 02 8B 19 CC D9 80 20 08 08 01 07 00 F4 01 07 03 03 73 50 10 7C 08 2A 00 03 00 59 8C 8D 01 46
 Code.HCS08=20 1C 22 47 02 CC D9 80 20 08 08 01 01 01 08 01 01 03 17 72 42 10 7B 08 3E 00 03 00 5A A9 CC FF 5F
 Notes=This combo protocol is used for setup codes Audio/1374 & TV/065
