*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@678 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -796,6 +796,7 @@ DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 #Code.S3C80=43 8B 52 8B 14 8F 45 08 08 00 CB 00 C4 00 CB 02 \
 #           6A 27 70 06 8F 03 3D 40 F8 20 01 76 03 01 6B 09 \
 #           E4 22 1C E4 23 1D 56 28 F7 8D 01 46
@@ -816,6 +817,7 @@ DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 #Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 \
 #           6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 \
 #           6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 \
@@ -837,6 +839,7 @@ DeviceTranslator=Translator(lsb,comp,0,8,24)
 DefaultCmd=00 00
 CmdParms=OBC=0,Sub dev={1}
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 \
            03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 \
@@ -1132,7 +1135,7 @@ FixedData=ff 00 ff 00
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,1,8) Translator(2,1,11,1) Translator(2,1,15)
 CmdParms=OBC:8=0,Device:0|1,Style :NEC1|NEC2|NECx1|NECx2=0
 CmdParmInit=PickInitializer(1,N0,N2)
-ImportCmdTranslator=Translator(0,1,8) NECStyleImporter(1)
+ImportCmdTranslator=Translator(0,1,8,0,-1) NECStyleImporter(1)
 DefaultCmd=00 20
 CmdIndex=0
 Notes=38.1 kHz  IR.exe and other tools that use DecodeIR.dll will decode a NECx1 or NECx2 protocol only if device=sub-device.
@@ -2512,10 +2515,10 @@ Code.740=0c 1c 31 a9 60 20 db 00 a2 16 a0 02 22 44 a5 5d 85 56 20 6c 01 a2 1b a0
 [ReplayTV (Official)]
 OldNames=ReplayTV Official
 PID=00 92
-CmdTranslator=Translator(0,8,8)
+CmdTranslator=TranslatorFromDev(1,8,0) Translator(0,8,8)
 CmdParms=OBC=0
 Notes=official version
-DevParms=Device Code=1,Unit Code
+DevParms=Device Code=1,Unit Code=0
 DeviceTranslator=Translator(0,8,8)
 FixedData=e0 01
 DefaultCmd=00 00
@@ -2532,7 +2535,7 @@ VariantName=3
 CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=official version
-DevParms=Device Code=1,Unit Code
+DevParms=Device Code=1,Unit Code=0
 DeviceTranslator=Translator(0,1,16,7) Translator(0,1,17,7,comp) \
                  Translator(0,1,18,6) Translator(0,1,19,6,comp) \
                  Translator(0,1,20,5) Translator(0,1,21,5,comp) \
@@ -2917,14 +2920,14 @@ Code.HCS08=20 18 22 48 31 CA 5D 08 08 01 16 01 1A 01 16 03 45 D7 56 11 A6 08 CB 
 OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte)
 PID=01 11
 VariantName=2byte
-CmdTranslator=Translator(lsb,comp,0,8,8)
+CmdTranslator=Translator(lsb,comp,0,8,0) TranslatorFromDev(comp,2,4,8)
 CmdParms=OBC=0
 Notes=official version
 DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
 FixedData=5E F3
 DefaultCmd=00 F0
-CmdIndex=1
+CmdIndex=0
 Code.S3C80=43 8D 22 8B 12 CF 44 08 08 01 1A 01 06 01 1A 03 \
            31 D7 42 11 A7 08 B7 F6 01 46 46 29 0D 8D 01 49
 Code.740=0D 18 22 80 15 E3 BE 01 16 08 08 01 A4 03 15 6B \
