--- a/build.xml
+++ b/build.xml
@@ -1,69 +1,68 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<project name="RemoteMaster" default="default" basedir=".">
-    <description>Builds, tests, and runs the project RemoteMaster.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="RemoteMaster" default="rmzip" basedir=".">
+    <description>
+        RemoteMaster build file
+    </description>
+  <!-- set global properties for this build -->
+  <property name="src" location="."/>
+  <property name="build" location="build"/>
+  <property name="dist" location="dist"/>
+  <available file="num-master.txt" property="nummaster.exists"/> 
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+  <target name="init">
+    <!-- Create the build directory structure used by compile -->
+    <mkdir dir="${build}"/>
+  	<mkdir dir="${dist}"/>
+  </target>
+	
+  <target name="compile" depends="init" description="compile the source">
+    <!-- Compile the java code from ${src} into ${build} -->
+    <javac classpath=".;info" srcdir="${src}" destdir="${build}"/>
+  </target>
+	
+  <target name="digitmaps" depends="compile" if="nummaster.exists">
+	<java classpath="${build}" classname="UpdateDigitMapsBin"/>
+  	<delete>
+  	  <file file="num-master.txt"/>
+    </delete>
+  </target>
+	
+	
+  <target name="rmjar" depends="compile" description="RemoteMaster.jar">
+    <jar destfile="${dist}/RemoteMaster.jar" manifest="RemoteMaster.mf">
+	  <fileset dir="${build}" includes="com/**,Setup.class"/>
+	  <fileset dir="${src}" includes="info/**"/>
+	</jar>
+  </target>
+	
+  <target name="rmzip" depends="rmjar,digitmaps" description="generate the distribution" >
+  	<copy todir="${dist}" flatten="true">
+      <resources>
+        <file file="${src}/Readme.html"/>
+        <file file="${src}/style.css"/>
+        <file file="${src}/styleie.css"/>
+        <file file="${src}/protocols.ini"/>
+        <file file="${src}/setup.bat"/>
+        <file file="${src}/ChangeLog.txt"/>
+        <file file="${src}/digitmaps.bin"/>
+        <file file="${src}/jp1parallel.dll"/>
+        <file file="${src}/porttalk.sys"/>
+        <file file="${src}/jp12serial.dll"/>
+        <file file="${src}/libjp12serial.so"/>
+        <file file="${src}/libjp1parallel.so"/>
+        <file file="${src}/rmaster.sh"/>
+        <file file="${src}/rmir.sh"/>
+      </resources>
+  	</copy>
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+    <zip destfile="${src}/RemoteMaster.zip" basedir="${dist}"/>
+  </target>
 
-    (Targets beginning with '-' are not intended to be called on their own.)
-
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
-
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar-with-manifest:    JAR building (if you are using a manifest)
-      -do-jar-without-manifest: JAR building (if you are not using a manifest)
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="RemoteMaster-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+  <target name="clean" description="clean up" >
+    <delete>
+      <fileset dir="${build}"/>
+      <fileset dir="${dist}"/>
+      <file file="RemoteMaster.jar"/>
+      <file file="RemoteMaster.zip"/>
+    </delete>
+  </target>
 </project>
