*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@698 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,7 @@
 
 	<target name="rmzip" depends="rmjar,digitmaps" description="generate the distribution">
 		<zip destfile="${src}/RemoteMaster.${rmversion}.zip" filesonly="true">
+			<file file="${src}/RemoteMaster.jar" />
 			<file file="${src}/Readme.html" />
 			<file file="${src}/style.css" />
 			<file file="${src}/styleie.css" />
