--- a/protocols.ini
+++ b/protocols.ini
@@ -483,6 +483,54 @@ IR.exe in the normal fashion.
 
 [Device Combiner]
 PID=01 44
+VariantName=HCS08
+Type=DeviceCombiner
+FixedData=
+DefaultCmd=00 00
+CmdIndex=1
+CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0
+CmdTranslator=Translator(0,4,4) Translator(1,4,0)
+Notes=The Device Combiner allows you to combine up to 16 different \
+protocols into one Device Upgrade. \
+\n\n\
+Any protocols specified in the Device Combiner MUST use 1-byte \
+function commands.\
+\n\n\
+NOTE: When using an upgraded protocol, \
+the user MUST ensure that the protocol code is installed on the \
+remote (using IR), as RemoteMaster has no way to verify this. \
+\n\n\
+There is also an optional Duration Control setting that can be \
+used for each function. \
+\n\n\
+Setting up the Device Combiner:\
+\n\n\
+There are 2 ways to add devices.\n\
+1. Importing from an existing RM or KM device upgrade: \n\
+On the "Device Combiner" panel, press the Import button and open \
+the device upgrade file you want to import.  Once RM has verified that \
+the protocol used by the imported upgrade file is compatible, you will be \
+asked to choose the functions to import from the upgrade. \
+\n\n\
+2. Manually adding a protocol:\n\
+On the "Device Combiner" panel, press the Add button to display the \
+"Combiner Device" dialog.  Select the protocol to use, and enter the \
+desired values for the protocol parameters, then press the OK button. \
+\n\n\
+Then, go to the Functions sheet and enter the EFC's (EFC-style \
+Button Codes MUST be used) for all of the various functions. In \
+the "Cominer Device" column, select the entry corresponding to the \
+protocol and parameters entered above. \
+\n\n\
+To enable Duration Control for the \
+function, select the duration multiple to be used in the "Duration" column \
+(default = 0 = none). \
+\n\n\
+Copy and paste the Device Upgrade Code and the Protocol Code into \
+IR.exe in the normal fashion.
+
+[Device Combiner]
+PID=01 44
 Type=DeviceCombiner
 FixedData=00 00
 DefaultCmd=00 00
@@ -1160,7 +1208,7 @@ Code.HCS08=20 15 22 47 42 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 
 [NEC 4DEV Combo]
 PID=01 1A
 VariantName=2
-DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2],Device3,Sub Device 3=[-3],Device 4,Sub Device 4=[-4]
+DevParms=Device 1,Sub Device 1=[-0],Device 2,Sub Device 2=[-2],Device3,Sub Device 3=[-4],Device 4,Sub Device 4=[-6]
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8) \
                  Translator(lsb,comp,2,8,16) Translator(lsb,comp,3,8,24) \
                  Translator(lsb,comp,4,8,32) Translator(lsb,comp,5,8,40) \
